[package]
name = "muframework"
version = "0.1.0"
authors = ["Eric Russell <cire1776@gmail.com>"]
edition = "2018"
description = "a rogue-like game designed to explore client-server architecture."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.8.1"
bracket-lib = "0.8.1"
bracket-terminal = "0.8.1"
regex = "1.3.7"
chrono = "0.4.11"
extern_timer = {package = "timer", version = "0.2.0"}
lazy_static = "1.4.0"
mut_static = "5.0.0"
Inflector = "0.11.4"
rand = "0.7.3"

[features]
default = ["opengl"]
opengl = [ "bracket-terminal/opengl" ]